include_directories(headers)

add_executable(M0403 leetcode/2021/M0403_最长公共子序列.cpp)
add_executable(M0404 leetcode/2021/M0404_森林中的兔子.cpp headers/uthash.h)
add_executable(M0407 leetcode/2021/M0407_搜索旋转排序数组II.cpp)

add_executable(P1032 luogu/P1032_字串变换.cpp)

add_executable(HDU1019 hduOJ/hdu1019_LeastCommonMultiple.cpp)